--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Chamada Facial</title>
-  <script defer src="face-api.js"></script>
+  <script defer src="face-api.min.js"></script>
   <script defer src="main.js"></script>
   <style>
     video, canvas, #imageUpload { display: block; margin: 10px auto; }
